# rx1

./: README.md
rx1/: CMakeLists.txt  package.xml
rx1_bringup/: CMakeLists.txt  package.xml
rx1_bringup/launch/: bringup.launch
rx1_bringup/launch/includes/: description.launch.xml  gemini2.launch  teleop.launch
rx1_bringup/scripts/: play_bags.py
rx1_description/: CMakeLists.txt  package.xml
rx1_description/launch/: record_urdf_test.launch  urdf.launch  urdf_test.launch
rx1_description/meshes/: torso_link.stl
rx1_description/meshes/archive/: torso_link.stl  torso_link_v2.stl
rx1_description/meshes/head/: head_base_link.stl  left_ear_link.stl  neck_pitch_link.stl  neck_yaw_link.stl  right_ear_link.stl
rx1_description/meshes/left_arm/: left_elbow_link.stl  left_forearm_link.stl  left_hand_link.stl  left_upper_arm_link.stl
rx1_description/meshes/right_arm/: right_elbow_link.stl  right_forearm_link.stl  right_forearm_pitch_link v2.stl  right_forearm_roll_link.stl  right_forearm_yaw_link v3.stl  right_hand_link.stl  right_shoul_base_link v2.stl  right_shoul_link v2.stl  right_upper_arm_link v4.stl  right_upper_arm_link.stl
rx1_description/rviz/: urdf.rviz
rx1_description/scripts/: calc_inertia.py
rx1_description/urdf/: rx1.bk  rx1.gazebo.urdf  rx1.urdf  rx1.urdf.xacro  rx1_bk.urdf.xacro  transmission.urdf
rx1_gazebo/: CMakeLists.txt  package.xml
rx1_gazebo/config/: rx1_control.bk  rx1_control.yaml
rx1_gazebo/launch/: rx1_gazebo.launch
rx1_gazebo/scripts/: controller_example.py  controller_gui_example.py
rx1_gazebo/worlds/: empty.world  table_world.world
rx1_ik/: CMakeLists.txt  package.xml
rx1_ik/config/: ik.yaml  ik_marker.yaml  ik_traj.yaml
rx1_ik/include/rx1_ik/: rx1_ik.h
rx1_ik/launch/: rx1_ik_apriltag.launch  rx1_ik_marker.launch  rx1_ik_traj.launch
rx1_ik/src/: rx1_ik_node.cpp
rx1_ik/src/rx1_ik/: rx1_ik.cpp
rx1_motor/: CMakeLists.txt  package.xml
rx1_motor/include/rx1_motor/: rx1_motor.hpp
rx1_motor/launch/: rx1_motor.launch
rx1_motor/src/: rx1_motor_node.cpp
rx1_motor/src/rx1_motor/: rx1_motor.cpp
rx1_motor_lib/: CMakeLists.txt  package.xml
rx1_motor_lib/include/rx1_motor_lib/: rx1_motor_lib.hpp
rx1_motor_lib/src/: rx_motor_lib.cpp
