<?xml version="1.0"?>
<package format="2">
  <name>rx1_description</name>
  <version>1.2.5</version>
  <description>
    3D models of the rx1 for simulation and visualization
  </description>
  <license>MIT</license>
  <author email="lethiic@gmail.com">lethic</author>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>

